--- a/pinyougou-common/pom.xml
+++ b/pinyougou-common/pom.xml
@@ -26,5 +26,10 @@
   		<artifactId>jedis</artifactId>
   		<version>2.6.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.data</groupId>
+  		<artifactId>spring-data-solr</artifactId>
+  		<version>1.5.5.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
