--- a/pinyougou-pojo/pom.xml
+++ b/pinyougou-pojo/pom.xml
@@ -7,10 +7,10 @@
   </parent>
   <artifactId>pinyougou-pojo</artifactId>
   <dependencies>
-  	<dependency>
-  		<groupId>org.springframework.data</groupId>
-  		<artifactId>spring-data-solr</artifactId>
-  		<version>1.5.5.RELEASE</version>
-  	</dependency>
+  <dependency>
+  	<groupId>com.pinyougou</groupId>
+  	<artifactId>pinyougou-common</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+  </dependency>
   </dependencies>
 </project>
