--- a/pinyougou-search-service/.classpath
+++ b/pinyougou-search-service/.classpath
@@ -33,5 +33,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/pinyougou-common"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pinyougou-sellergoods-service"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
