--- a/pinyougou-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/pinyougou-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,7 @@
   <!-- springsecurity相关 -->
   <context-param>
   	<param-name>contextConfigLocation</param-name>
-  	<param-value>classpath:spring/spring-security.xml</param-value>
+  	<param-value>classpath:spring/spring-*.xml</param-value>
   </context-param>
   <listener>
   	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
