--- a/pinyougou-search-service/pom.xml
+++ b/pinyougou-search-service/pom.xml
@@ -78,6 +78,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-client</artifactId>
+			<version>5.13.4</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.pinyougou</groupId>
 			<artifactId>pinyougou-search-interface</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
